Hecho mas cosas con respecto a contenido/derecho. editar tendria que estar andando!

--- a/views/lpe/contenido/derecho/crear.twig
+++ b/views/lpe/contenido/derecho/crear.twig
@@ -77,7 +77,7 @@
 </form>
 
 {% endblock %} {# ----------------------------------------------------------- #} {% block scripts %}
-<script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>
+<script src="{{ baseUrl() }}/assets-lpe/js/autosize.min.js"></script>cuerpo
 <script src="{{ baseUrl() }}/assets-lpe/js/sceditor/jquery.sceditor.js"></script>
 <script id="accionTemplate" type="text/template">
     <div class="accion-container">
