Evento, Participante estan andando! Falta arreglar algo de opinion y listo.

--- a/views/lpe/contenido/evento/crear.twig
+++ b/views/lpe/contenido/evento/crear.twig
@@ -55,6 +55,7 @@
         </div>
     </div>
     <input type="text" name="categoria" value="1" hidden>
+    <input type="text" name="coordenadas" value="" hidden>
     <input type="text" name="tags" value="" hidden>
 </form>
 
