Cambios en algunas vistas de administracion

--- a/views/lpe/admin/moderadores.twig
+++ b/views/lpe/admin/moderadores.twig
@@ -18,8 +18,8 @@
                                 <input id="typeahead" type="text" class="form-control" style="width:100%;">
                                 <input type="hidden" name="id" value="">
                                 <span class="input-group-btn">
-      <button class="btn btn-warning" type="button"><i class="zmdi zmdi-plus zmdi-hc-lg"></i></button>
-    </span>
+                                <button type="submit" class="btn btn-success" type="button"><i class="zmdi zmdi-plus zmdi-hc-lg"></i></button>
+                                </span>
                             </div>
                         </div>
                     </form>
@@ -29,10 +29,10 @@
                     <div class="pull-right text-center">
                         <form action="" method="POST">
                             <input type="hidden" name="id" value="{{moderador.id}}">
-                            <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
+                            <button type="submit" class="btn btn-danger btn-sm"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
                         </form>
                     </div>
-                    <h4><strong><i class="zmdi zmdi-accounts-list-alt zmdi-hc-lg zmdi-hc-fw"></i> {{ moderador.nombre }} {{ moderador.apellido}}</strong></h4>
+                    <h4><strong><i class="zmdi zmdi-accounts-list-alt zmdi-hc-lg zmdi-hc-fw"></i> {{ moderador.nombre }} {{ moderador.apellido }}</strong> <small>{{ moderador.email}}</small></h4>
                 </li>
                 {% endfor %} {% else%}
                 <li class="list-group-item">
@@ -54,7 +54,7 @@
             return obj.id;
         },
         remote: {
-            url: '{{ baseUrl() }}' + '/usuario?q=%QUERY',
+            url: '{{ baseUrl() }}' + '/usuario?where_null=patrulla_id&q=%QUERY',
             wildcard: '%QUERY'
         }
     });
