--- a/views/lpe/admin/participantes.twig
+++ b/views/lpe/admin/participantes.twig
@@ -26,7 +26,7 @@
                         </div>
                         <div class="form-group text-right">
                             <div class="col-xs-12"> 
-                                <a href="#" class="btn btn-warning btn-sm">+ Nuevo participante</a>
+                                <button type="submit" href="#" class="btn btn-success btn-sm">+ Nuevo participante</button>
                             </div>
                         </div>
                     </form>
@@ -36,10 +36,11 @@
                     <div class="pull-right text-center">
                        <form action="#" method="POST">
                             <input type="hidden" name="id" value="{{participante.id}}">
-                            <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
+                            <button type="submit" class="btn btn-danger btn-sm"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
                         </form>
                     </div>
                     <h4><strong><i class="zmdi zmdi-account zmdi-hc-lg zmdi-hc-fw"></i> {{ participante.nombre }}</strong></h4>
+                    <h6>{{participante.descripcion}}</h6>
                 </li>
                 {% endfor %} {% else%}
                 <li class="list-group-item">
