Pequeño fix en submit

--- a/views/lpe/admin/moderadores.twig
+++ b/views/lpe/admin/moderadores.twig
@@ -18,7 +18,7 @@
                                 <input id="typeahead" type="text" class="form-control" style="width:100%;">
                                 <input type="hidden" name="id" value="">
                                 <span class="input-group-btn">
-                                <button type="submit" class="btn btn-success" type="button"><i class="zmdi zmdi-plus zmdi-hc-lg"></i></button>
+                                <button type="submit" class="btn btn-success"><i class="zmdi zmdi-plus zmdi-hc-lg"></i></button>
                                 </span>
                             </div>
                         </div>
