--- a/public/assets-lpe/scss/lpe.scss
+++ b/public/assets-lpe/scss/lpe.scss
@@ -436,6 +436,12 @@ textarea.comentario{
     }
 }
 
+// ================
+
+.opinionModal .descripcion{
+    font-size: 14px;
+      line-height: 21px;
+}
 
 
 // --------------------
