--- a/views/lpe/admin/subirImagenes.twig
+++ b/views/lpe/admin/subirImagenes.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="list-group">
                 <li class="list-group-item">
-                    <form action="{{ urlFor('runCrearImagen') }}" method="POST">
+                    <form action="{{ urlFor('runCrearImagen') }}" method="POST" enctype="multipart/form-data">
                         <div class="form-group">
                             <label class="control-label"><strong>Nueva Imagen</strong></label><br>
                             <div class="input-group">
@@ -27,21 +27,21 @@
                         </div>
                     </form>
                 </li>
-                {% if imagenes|length > 0%} {% for imagen in imagenes %}
+                {% if imagenes|length > 0 %} {% for imagen in imagenes %}
                 <li class="list-group-item">
                     <div class="clearfix">
                         <div class="pull-right text-center">
                             <form action="" method="POST">
-                                <input type="hidden" name="id" value="{{moderador.id}}">
-                                <a href="#" class="btn btn-success" onclick="copyToClipboard('###')"><i class="zmdi zmdi-copy"></i></a>
+                                <input type="hidden" name="nombre" value="{{imagen.nombre}}">
+                                <a href="javascript:void(0)" class="btn btn-success" onclick="copyToClipboard('{{ baseUrl() + '/img/uploads/' + imagen }}')"><i class="zmdi zmdi-copy"></i></a>
                                 <button type="submit" class="btn btn-danger"><i class="zmdi zmdi-close zmdi-hc-lg"></i></button>
                             </form>
                         </div>
                         <div class="pull-left">
-                            <img src="" class="img-thumbnail" style="height:100px">
+                            <img src="{{ baseUrl() + '/img/uploads/' + imagen }}" class="img-thumbnail" style="height:100px">
                         </div>
-                        <h4><strong><i class="zmdi zmdi-image zmdi-hc-lg zmdi-hc-fw"></i> ####</strong></h4>
-                        <h6>&nbsp;&nbsp;&nbsp;</h6>
+                        <h4><strong><i class="zmdi zmdi-image zmdi-hc-lg zmdi-hc-fw"></i>{{ imagen.nombre }}</strong></h4>
+                        <h6>&nbsp;&nbsp;&nbsp;{{ baseUrl() + '/img/uploads/' + imagen.nombre }}</h6>
                     </div>
                 </li>
                 {% endfor %} {% else %}
