--- a/views/lpe/contenido/derecho/ver.twig
+++ b/views/lpe/contenido/derecho/ver.twig
@@ -55,7 +55,7 @@
                     <div class="panel-body tag-opinion" style="background-image: url('https://unsplash.it/505/300/?random');">
                         <a href="javascript:void(0)" data-toggle="modal" data-target="#opinion{{loop.index}}">
                             <div class="overlay">
-                                <h5><small>La opinión de..</small><br><b>{{opinion.participante.nombre}}#</b></h5>
+                                <h5><small>La opinión de..</small><br><b>{{opinion.participante.nombre}}</b></h5>
                             </div>
                         </a>
                     </div>
